# governed-bi

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  governed_bi.toml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
corpus/: .gitignore  README.md  README.zh.md
corpus/beer_factory/few-shots/: fs_beer_factory_001.yaml
corpus/beer_factory/joins/: join_review_rootbeerbrand.yaml  join_rootbeer_rootbeerbrand.yaml  join_transaction_customers.yaml  join_transaction_rootbeer.yaml
corpus/beer_factory/metrics/: metric_avg_rating.yaml  metric_revenue.yaml
corpus/beer_factory/negatives/: neg_beer_factory_001.yaml
corpus/beer_factory/notes/: note_beer_factory_routing.yaml  note_boolean_flags.yaml
corpus/beer_factory/rules/: rule_boolean_flags.yaml
corpus/beer_factory/skills/: routing.md
corpus/beer_factory/tables/: tbl_beer_factory_customers.yaml  tbl_beer_factory_rootbeer.yaml  tbl_beer_factory_rootbeerbrand.yaml  tbl_beer_factory_rootbeerreview.yaml  tbl_beer_factory_transaction.yaml
corpus/beer_factory/terms/: term_brand.yaml  term_revenue.yaml
corpus/california_schools/few-shots/: fs_california_schools_003.yaml
corpus/california_schools/joins/: join_frpm_schools.yaml
corpus/california_schools/metrics/: metric_frpm_rate.yaml
corpus/california_schools/negatives/: neg_california_schools_002.yaml
corpus/california_schools/rules/: rule_academic_year_format.yaml
corpus/california_schools/skills/: routing_frpm.md
corpus/california_schools/tables/: tbl_california_schools_frpm.yaml  tbl_california_schools_schools.yaml
corpus/california_schools/terms/: term_eligibility_rate.yaml  term_enrollment.yaml
data/: README.md  README.zh.md
data/bird/: NOTICE  beer_factory.sqlite
docs/: README.md  README.zh.md  analyst-llm-call.md  analyst-llm-call.zh.md  analyst-sequence.md  analyst.md  analyst.zh.md  architecture.md  architecture.zh.md  asset-schemas.md  asset-schemas.zh.md  corpus-authoring.md  corpus-authoring.zh.md  curator-llm-call.md  curator-llm-call.zh.md  curator-sequence.md  curator.md  curator.zh.md  design-decisions.md  design-decisions.zh.md  diagrams.md  diagrams.zh.md  engineering-gaps-2026-07-16.html  glossary.md  glossary.zh.md  langgraph-rework-plan.md  langgraph-rework-plan.zh.md  openapi.json  pipeline-design.md  references.md  references.zh.md  server-llm-call.md  server-llm-call.zh.md  server.md  server.zh.md  system-overview.md  system-overview.zh.md  ui-frontend-design.md  ui-frontend-design.zh.md  ui-frontend-handoff.md  (+7 more)
docs/adr/: 0001-langgraph-server-chat-runtime.md  0001-langgraph-server-chat-runtime.zh.md  0002-governed-agentic-serve-runtime.md  0003-governed-notes-tri-modal-retrieval.md  0003-governed-notes-tri-modal-retrieval.zh.md  0004-local-first-conversation-run-logging.md  0004-local-first-conversation-run-logging.zh.md
docs/diagrams/: beer-factory.md  beer-factory.zh.md  california-schools.md  corpus.md  corpus.zh.md  curator.md  curator.zh.md  eval.md  eval.zh.md  overview.md  overview.zh.md  server.md  server.zh.md  viz.md  viz.zh.md
docs/plans/: agent-step-visualization.md  agentic-serve-ab-results.md  agentic-serve-build-guide.md  agentic-serve-rework-plan.md  clarification-sme-benchmark-build-plan.md  curator-rework-plan.md  datalake-run.md  engineering-gaps-2026-07-16.md  eval-audit-backlog-2026-07-22.md  eval-concurrency-design.md  eval-ladder-results.md  hitl-clarification-contract.md  implementation-plan-notes-and-run-logging.md  schema-qualification-scale-risk.md  spike-1-2-m2-verdicts.md  terminology-refactor.md  three-arm-experiment-plan.md  three-arm-experiment-results.md  ui-foundation-phase1.md
scripts/: live_smoke.py
src/governed_bi/: __init__.py  config.py  obs.py  provenance.py
src/governed_bi/analyst/: __init__.py  agent.py  answer.py  cache.py  clarify.py  context.py  governance.py  middleware.py  narrate.py  note_inject.py  routing.py  run_log.py  sqlgen.py  tools.py
src/governed_bi/api/: __init__.py  app.py  graph_app.py  routes.py  schemas.py  stack.py
src/governed_bi/corpus/: __init__.py  clarify.py  cli.py  history.py  ids.py  loader.py  schemas.py  serialize.py  validate.py
src/governed_bi/curator/: __init__.py  adversary.py  asset_bag.py  build.py  clarifications.py  clarify_loop.py  deep_agent.py  enrich.py  llm_proposer.py  loop.py  pipeline.py  profile.py  prompts.py  proposer.py  seed.py  sme.py
src/governed_bi/eval/: __init__.py  arms.py  baseline_solver.py  bird_loader.py  dataset.py  ex.py  gold.py  hash_grade.py  note_gates.py  parallel.py  refuse_gate.py  retrieval_eval.py  run_datalake.py  run_experiment.py
src/governed_bi/gateway/: __init__.py  factory.py  gateway.py  guardrails.py
src/governed_bi/graph/: __init__.py  planner.py  projection.py
src/governed_bi/llm/: __init__.py  client.py  fake.py  langchain_client.py
src/governed_bi/memory/: __init__.py  store.py
src/governed_bi/retrieval/: __init__.py  embedding.py  rvgd.py  schema_router.py  triggers.py
src/governed_bi/server/: __init__.py  agent.py  answer.py  cache.py  context.py  flow.py  governance.py  graph.py  middleware.py  narrate.py  routing.py  sqlgen.py  tools.py
tests/: conftest.py  test_agent_governance_fixes.py  test_agent_step_events.py  test_analyst.py  test_api.py  test_bird_loader.py  test_build_facts.py  test_cache.py  test_chat_graph.py  test_clarification.py  test_clarifications_ledger.py  test_clarify_loop.py  test_config.py  test_connector.py  test_context.py  test_corpus.py  test_corpus_root.py  test_curator.py  test_curator_agent_behavior.py  test_curator_deep_agent.py  test_datalake_routing.py  test_datasource.py  test_embedding_retrieval.py  test_eval.py  test_eval_concurrency.py  test_eval_ladder.py  test_eval_run_log_turns.py  test_eval_usage.py  test_fake_tool_model.py  test_governance_invariants.py  test_governance_ledger.py  test_graded_delivery_cap.py  test_graded_delivery_l3_hard.py  test_graph.py  test_graph_scope.py  test_guardrail_function_denylist.py  test_guardrails.py  test_hash_grade.py  test_history.py  test_langchain_client.py  (+31 more)
(+9 files in other folders)
