[project]
name = "governed-bi"
version = "0.1.0"
description = "Agentic BI: natural-language questions to grounded, governed, auditable answers over relational data."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Minhao Zhang" }]
dependencies = [
    # Corpus asset schemas (Facts / Inference / Audit tiers) and validation.
    "pydantic>=2.7",
    # YAML typed assets are the source of truth (D9).
    "pyyaml>=6.0",
    # In-memory property graph + Steiner-tree join planning (BIRD scale).
    "networkx>=3.3",
    # SQL parsing for the AST column-allowlist guardrail (server L3).
    "sqlglot>=25.0",
]

[project.optional-dependencies]
# DB connectors beyond SQLite (which is stdlib). Installed only when targeting
# these engines; the connector code imports the driver lazily.
postgres = ["psycopg[binary]>=3.1"]
# Redshift speaks the Postgres wire protocol; RedshiftConnector subclasses
# PostgresConnector and reuses psycopg (overriding only svv_* catalog introspection).
redshift = ["psycopg[binary]>=3.1"]
# The HTTP JSON API (governed_bi.api) a separate frontend consumes. Imported only
# by that package; the core install stays free of a web framework. The read-only
# view models in governed_bi.viz.presenter are dependency-free and need no extra.
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
# The LLM + embedding seams (governed_bi.llm). Imported lazily, so the engine
# runs on the deterministic offline clients without it; install to use the
# OpenAI-backed generator, curator proposer, vector retrieval, and SQL cache.
openai = ["openai>=1.40"]
# The agent harnesses: server = LangGraph StateGraph DAG + the LangGraph Server
# chat graph (governed_bi.api.graph_app), curator = deepagents, with LangChain
# model/embedding clients. Imported only by the harness modules; the deterministic
# core runs without them. langgraph-cli[inmem] provides the `langgraph dev` server
# that hosts the chat graph + custom routes (langgraph.json).
agents = [
    "langgraph>=1.0",
    "langgraph-cli[inmem]>=0.2",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "deepagents>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    # Starlette's TestClient (used by the API tests) needs httpx.
    "httpx>=0.27",
    # LangChain's DeterministicFakeEmbedding (used by the LangChainEmbedder tests)
    # imports numpy; it is not a hard langchain-core dependency, so pin it here for
    # the test environment (previously satisfied transitively via streamlit).
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governed_bi"]
