[project]
name = "governed-bi"
version = "0.1.0"
description = "Agentic BI: natural-language questions to grounded, governed, auditable answers over relational data."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Minhao Zhang" }]
# Core + agent deps live here (no extra): a plain `uv sync` installs everything the
# default OpenAI-backed stack needs, so dev never hits a "feature silently off
# because its extra wasn't installed" bug (e.g. Langfuse tracing). The one extra is
# `bedrock` (AWS Bedrock provider) — an alternate LLM/embedding backend that pulls a
# heavy boto3 tree most runs don't need. See [project.optional-dependencies].
dependencies = [
    # --- Core engine (deterministic) ---
    # Corpus asset schemas (Facts / Inference / Audit tiers) and validation.
    "pydantic>=2.7",
    # YAML typed assets are the source of truth (D9).
    "pyyaml>=6.0",
    # In-memory property graph + Steiner-tree join planning (BIRD scale).
    "networkx>=3.3",
    # SQL parsing for the AST column-allowlist guardrail (server L3).
    "sqlglot>=25.0",
    # --- DB connectors (Postgres + Redshift both ride psycopg; drivers lazy-imported) ---
    "psycopg[binary]>=3.1",
    # --- HTTP JSON API (governed_bi.api) the frontend consumes ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # --- LLM + embedding seams (governed_bi.llm), OpenAI-backed ---
    "openai>=1.40",
    # --- Agent harnesses: LangGraph server DAG + deepagents curator + LangChain clients ---
    "langgraph>=1.0",
    "langgraph-cli[inmem]>=0.2",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "deepagents>=0.6",
    # --- External tracing (Langfuse callback; LangSmith is env-native, no dep) ---
    "langfuse>=3.0",
]

[project.optional-dependencies]
# AWS Bedrock LLM + embedding provider. Opt in with `uv sync --extra bedrock`
# (or `pip install 'governed-bi[bedrock]'`), then set provider = "bedrock" in the
# [models] table. langchain-aws pulls boto3, hence keeping it out of the default
# install. Credentials come from boto3's standard chain (env / profile / role).
bedrock = [
    "langchain-aws>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    # Starlette's TestClient (used by the API tests) needs httpx.
    "httpx>=0.27",
    # LangChain's DeterministicFakeEmbedding (used by the LangChainEmbedder tests)
    # imports numpy; it is not a hard langchain-core dependency, so pin it here for
    # the test environment (previously satisfied transitively via streamlit).
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governed_bi"]
